# llama.cpp

./: .editorconfig  CMakeLists.txt  Makefile  README.md  build-xcframework.sh  convert_hf_to_gguf.py  convert_hf_to_gguf_update.py
.devops/: cuda.Dockerfile  intel.Dockerfile  musa.Dockerfile  rocm.Dockerfile
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: 010-bug-compilation.yml  011-bug-results.yml
.github/workflows/: build-linux-cross.yml  build.yml  docker.yml  release.yml  winget.yml
ci/: run.sh
common/: CMakeLists.txt  arg.cpp  chat-parser.cpp  chat-parser.h  chat.cpp  chat.h  common.cpp  common.h  json-partial.cpp  sampling.cpp
docs/: build-s390x.md  build.md  docker.md  function-calling.md  multimodal.md  ops.md
docs/backend/: CANN.md
docs/multimodal/: gemma3.md
docs/ops/: Metal.csv
examples/embedding/: embedding.cpp
examples/eval-callback/: eval-callback.cpp
examples/llama-bench/: llama-bench.cpp
examples/llava/: CMakeLists.txt  README.md  clip-impl.h  clip.cpp  clip.h  gemma3-cli.cpp  mtmd-cli.cpp  mtmd.cpp  mtmd.h  qwen2vl-cli.cpp  tests.sh
examples/parallel/: parallel.cpp
examples/retrieval/: retrieval.cpp
examples/rpc/: rpc-server.cpp
examples/server/: README.md  server.cpp
examples/simple-chat/: simple-chat.cpp
ggml/: CMakeLists.txt
ggml/include/: ggml.h
ggml/src/: CMakeLists.txt  ggml-impl.h  ggml-sycl.cpp  ggml.c
ggml/src/ggml-cann/: ggml-cann.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  apple-fallback.h  ggml-cpu.c  ops.cpp
ggml/src/ggml-cuda/: ggml-cuda.cu
ggml/src/ggml-metal/: ggml-metal.m  ggml-metal.metal
ggml/src/ggml-opencl/: ggml-opencl.cpp
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
gguf-py/: pyproject.toml
gguf-py/gguf/: constants.py  gguf_writer.py  tensor_mapping.py  vocab.py
include/: llama.h
models/: ggml-vocab-nomic-bert-moe.gguf.out
models/templates/: README.md
scripts/: compare-llama-bench.py  sync-ggml-am.sh  sync-ggml.last  sync-ggml.sh
src/: llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-batch.h  llama-chat.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-hparams.cpp  llama-hparams.h  llama-kv-cache-recurrent.h  llama-kv-cache-unified-iswa.cpp  llama-kv-cache-unified-iswa.h  llama-kv-cache-unified.cpp  llama-kv-cache-unified.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid.cpp  llama-memory-recurrent.cpp  llama-memory.h  llama-model.cpp  llama-model.h  llama-quant.cpp  llama-sampling.cpp  llama-vocab.cpp  llama.cpp
tests/: CMakeLists.txt  test-backend-ops.cpp  test-chat-template.cpp  test-chat.cpp  test-json-schema-to-grammar.cpp  test-opt.cpp  test-quantize-stats.cpp
tools/: CMakeLists.txt
tools/imatrix/: README.md  imatrix.cpp
tools/llama-bench/: README.md  llama-bench.cpp
tools/llava/: clip-impl.h  clip.cpp  mtmd.cpp
tools/main/: main.cpp
tools/mtmd/: CMakeLists.txt  README.md  clip-impl.h  clip.cpp  clip.h  mtmd-audio.cpp  mtmd-audio.h  mtmd-cli.cpp  mtmd-helper.cpp  mtmd.cpp  mtmd.h  tests.sh
tools/run/: run.cpp
tools/server/: CMakeLists.txt  README.md  server.cpp  utils.hpp
tools/server/tests/: utils.py
tools/server/tests/unit/: test_chat_completion.py  test_template.py  test_tool_call.py
tools/tts/: tts.cpp
